<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="userListViewModel"
            type="com.payconiq.testApplication.ui.gitHubUserList.GitHubUserListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">


        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            app:queryBackground="@android:color/transparent"
            android:background="@drawable/rectangle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/search"
            android:onClick="@{() -> userListViewModel.onSearchClick()}"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/search_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_view"
            app:layout_constraintBottom_toBottomOf="@id/search_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_search_github_user"
            android:visibility="@{userListViewModel.isDataFetched?View.GONE:View.VISIBLE}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gitHub_user_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:visibility="@{userListViewModel.isDataFetched?View.VISIBLE:View.GONE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_view" />


        <com.payconiq.testApplication.utils.CustomProgressBar
            android:id="@+id/fragment_git_hub_user_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibility="@{userListViewModel.isLoading}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>